@@ -3,7 +3,7 @@ package com.glodblock.github.client.gui.container;
 import static com.glodblock.github.loader.ItemAndBlockHolder.DROP;
 import static com.glodblock.github.loader.ItemAndBlockHolder.PACKET;
 
-import java.util.List;
+import java.util.Arrays;
 
 import net.minecraft.entity.player.InventoryPlayer;
 
@@ -17,7 +17,13 @@ public class ContainerFluidPacketDecoder extends AEBaseContainer {
     public ContainerFluidPacketDecoder(InventoryPlayer ipl, TileFluidPacketDecoder tile) {
         super(ipl, tile);
         addSlotToContainer(
-                new FCSlotRestrictedInput(List.of(PACKET.stack(), DROP.stack()), tile.getInventory(), 0, 80, 35, ipl));
+                new FCSlotRestrictedInput(
+                        Arrays.asList(PACKET.stack(), DROP.stack()),
+                        tile.getInventory(),
+                        0,
+                        80,
+                        35,
+                        ipl));
         bindPlayerInventory(ipl, 0, 84);
     }
 }
